--- a/www/templates/tab-setup.html
+++ b/www/templates/tab-setup.html
@@ -40,9 +40,23 @@
             <div class="row label1">
                 <ion-checkbox ng-model="showPasswordIsChecked">Mostra password</ion-checkbox>
             </div>
+             <div class="row label1">
+                <div class="col text-center">
+                    Indirizzo email
+                </div>
+
+            </div>
+            <div class="row label1">
+                <label class="item item-input">
+                    <input type="text" ng-model="setup.mailTo">
+                </label>
+            </div>
             <div class="row label1">
                 <button class="button button-block button-positive overflowShow" type="submit">Salva</button>
             </div>
+            
+           
+            
         </form>
     </ion-content>
 </ion-view>
