--- a/www/templates/tab-setup.html
+++ b/www/templates/tab-setup.html
@@ -48,7 +48,7 @@
             </div>
             <div class="row label1">
                 <label class="item item-input">
-                    <input type="text" ng-model="setup.mailTo">
+                    <input type="email" ng-model="setup.mailTo">
                 </label>
             </div>
             <div class="row label1">
